# baul-extensions

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  baul-extensions.pot  caja-extensions.pot  configure.ac  index.html  makepot  output_02007ff03bd44a4097bc2348a4fce1d0608f4ed2  output_5811f9187b01f47a25ffd98e9806d2daa5996794  output_e2d3f18f6f039cabf1601589b5d5afec0d868bca
.tx/: config
2022-12-30-145156-45474-1@3f2cdb0f145a_master/: index.html  report-e01d71.html
2022-12-30-145303-8494-cppcheck@3f2cdb0f145a_master/: 5.html  commitmsg  index.html  output_3f2cdb0f145aac6cfefa09fb8b91d80cd39b15d0
2022-12-31-024308-45592-1@757d71344a41_master/: index.html  output_757d71344a41ac0dff902fa809a103ab82cfe322  report-e01d71.html
2022-12-31-024438-6627-cppcheck@757d71344a41_master/: 1.html  6.html  7.html  stats.html
2023-01-01-084301-45594-1@5e9b4ed47173_devel/: commitmsg  index.html  output_5e9b4ed4717362a3f5789fa27bda27a044c8c63b  report-e01d71.html
2023-01-01-084409-4344-cppcheck@5e9b4ed47173_devel/: 3.html  4.html  index.html  stats.html
2023-01-01-084812-45594-1@bcf212c085cc_devel/: index.html  output_bcf212c085cc738e5a055196cef356aec6c28df3  report-e01d71.html
2023-01-01-084918-3196-cppcheck@bcf212c085cc_devel/: 0.html  2.html  5.html  6.html  commitmsg  index.html  stats.html
2023-01-01-085239-45597-1@47a51b642fbe_devel/: index.html  report-e01d71.html
2023-01-01-085403-7995-cppcheck@47a51b642fbe_devel/: 3.html  commitmsg  index.html  output_47a51b642fbe01194b3466a1d2445dd8bf938a7c
2023-01-01-093545-45591-1@7270e3c8cefb_devel/: index.html  output_7270e3c8cefbca1eba9652e89aa4da2d97d27198  report-e01d71.html
2023-01-01-093653-6228-cppcheck@7270e3c8cefb_devel/: 5.html  commitmsg
2023-01-01-181821-45594-1@70e9bb6b21f1_devel/: commitmsg  index.html  report-e01d71.html
2023-01-01-181929-4865-cppcheck@70e9bb6b21f1_devel/: 1.html  4.html  output_70e9bb6b21f10c0b63f3eb4e3e5cf31147a86b3f
2023-01-01-194823-45592-1@6b944579b155_devel/: index.html  output_6b944579b155d2b2837f3baff3e5479a01a6bee9  report-e01d71.html
2023-01-01-194934-3769-cppcheck@6b944579b155_devel/: 0.html  2.html
2023-01-01-202142-45592-1@e2d3f18f6f03_devel/: index.html  report-e01d71.html
2023-01-01-202311-4626-cppcheck@e2d3f18f6f03_devel/: output_e2d3f18f6f039cabf1601589b5d5afec0d868bca
2023-01-01-213406-45617-1@e2d3f18f6f03_master/: index.html  report-e01d71.html
2023-01-01-213529-5933-cppcheck@e2d3f18f6f03_master/: stats.html
2024-01-21-115231-48697-1@e2d3f18f6f03_cimaster/: index.html  report-e01d71.html
2024-01-21-115331-7589-cppcheck@e2d3f18f6f03_cimaster/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  index.html  stats.html
2024-08-05-143159-48662-1@5811f9187b01_master/: index.html  report-e01d71.html
2024-08-05-143304-9809-cppcheck@5811f9187b01_master/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html  stats.html
2025-01-27-123207-47352-1@4cb60e88a4fc_devel/: commitmsg  index.html  output_4cb60e88a4fcdf90400bc6477a1091c47d8a9d17  report-e01d71.html
2025-01-27-123314-8888-cppcheck@4cb60e88a4fc_devel/: 9.html
2025-01-27-145853-47352-1@2d95c12a43ca_devel/: index.html  report-e01d71.html
2025-01-27-150005-7038-cppcheck@2d95c12a43ca_devel/: 7.html  commitmsg  output_2d95c12a43cac26e9bb245ce35f6e85441c4d2f3
2025-01-27-150616-47352-1@05467722ed82_devel/: index.html  report-e01d71.html
2025-01-27-150727-9706-cppcheck@05467722ed82_devel/: 11.html  5.html  output_05467722ed82797190bbea2a78b13cbbed13e1de  stats.html
2025-01-27-151437-47352-1@eb453573d7d6_devel/: index.html  output_eb453573d7d67350e3086743161b1adf420bf60f  report-e01d71.html
2025-01-27-152807-47352-1@02007ff03bd4_devel/: index.html  output_02007ff03bd44a4097bc2348a4fce1d0608f4ed2  report-e01d71.html
2025-01-27-154650-47352-1@02007ff03bd4_master/: index.html  output_02007ff03bd44a4097bc2348a4fce1d0608f4ed2  report-e01d71.html
2025-01-27-154700-47352-1@02007ff03bd4_devel/: index.html  report-e01d71.html
gksu/: Makefile.am  libbaul-gksu.baul-extension.desktop.in.in  libbaul-gksu.c  libcaja-gksu.caja-extension.desktop.in.in
image-converter/: Makefile.am  baul-image-converter.c  baul-image-converter.h  baul-image-resize.ui  baul-image-resizer.c  baul-image-resizer.h  baul-image-rotate.ui  baul-image-rotator.c  baul-image-rotator.h  image-converter.c  libbaul-image-converter.baul-extension.desktop.in.in
open-terminal/: Makefile.am  baul-open-terminal.c  baul-open-terminal.h  caja-open-terminal.c  libbaul-open-terminal.baul-extension.desktop.in.in  open-terminal.c  org.cafe.baul-open-terminal.gschema.xml.in
po/: Makevars  (+115 more)
sendto/: Makefile.am  baul-nste.c  baul-nste.h  baul-sendto-command.c  baul-sendto-module.c  baul-sendto-plugin.h  baul-sendto.1  baul-sendto.pc.in  baul-sendto.ui  libbaul-sendto.baul-extension.desktop.in.in  org.cafe.Baul.Sendto.gschema.xml.in  org.cafe.Caja.Sendto.gschema.xml.in  org.cafe.baul.extensions.sendto.gresource.xml  org.cafe.caja.extensions.sendto.gresource.xml
sendto/docs/: Makefile.am  baul-sendto-docs.sgml  baul-sendto-sections.txt  caja-sendto-docs.sgml
sendto/plugins/: nst-common.c
sendto/plugins/baul-burn/: Makefile.am  baul-burn.c
sendto/plugins/emailclient/: Makefile.am  emailclient.c
sendto/plugins/gajim/: Makefile.am  gajim.c
sendto/plugins/pidgin/: Makefile.am  pidgin.c
sendto/plugins/removable-devices/: Makefile.am  removable-devices.c
sendto/plugins/upnp/: Makefile.am  upnp.c
share/: Makefile.am  baul-share.c  baul-share.h  caja-share.c  libbaul-share.baul-extension.desktop.in.in  share-dialog.ui  shares.c
wallpaper/: Makefile.am  baul-wallpaper-command.c  baul-wallpaper-extension.c  baul-wallpaper-extension.h  caja-wallpaper-extension.c  libbaul-wallpaper.baul-extension.desktop.in.in  libcaja-wallpaper.caja-extension.desktop.in.in
xattr-tags/: Makefile.am  baul-xattr-tags-extension.c  baul-xattr-tags-extension.h  libbaul-xattr-tags.baul-extension.desktop.in.in  libcaja-xattr-tags.caja-extension.desktop.in.in
(+25 files in other folders)
